Fix close button cursor on IE

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -128,6 +128,7 @@ body {
     border-radius: 50%;
     &:hover {
       color: grey;
+      cursor: default;
     }
   }
   .border {
